# zwiftscout

./: .gitignore  README.md  app.py  builder.py  pyproject.toml
data/: zrapp.duckdb
ui/: coffee.py  figures.py  helpers.py  inputs.py  tables.py
zrapp/: endpoints.py  helpers.py
zs_pages/: about.py  directai_sportif.py  scout.py
